k8s/ingress-service.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: 'nginx'
    nginx.ingress.kubernetes.io/use-regex: 'true'
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    # UPDATE THIS LINE ABOVE
spec:
  rules:
    - http:
        paths:
        - path: /?(.*)
          pathType: Prefix
          backend:
            serviceName: client-cluster-ip-service
            servicePort: 3000
        - path: /api/?(.*)
          pathType: Prefix
          backend:
            serviceName: server-cluster-ip-service
            servicePort: 5000
        # paths:
        #   - path: /?(.*)
        #     pathType: Prefix
        #     # UPDATE THIS LINE ABOVE
        #     backend:
        #         service:
        #           name: client-cluster-ip-service
        #           port: 
        #             number: 3000
        #   - path: /api/?(.*)
        #     pathType: Prefix
        #     # UPDATE THIS LINE ABOVE
        #     backend:
        #       service:
        #             name: server-cluster-ip-service
        #             port: 
        #               number: 5000
